[package]
description = "Created with Anchor"
edition = "2021"
name = "registry"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
lockup = {path = "../lockup", features = ["cpi"]}
solana-program = "1.9.5"
