[package]
description = "Created with Anchor"
edition = "2021"
name = "registry_realizor"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry_realizor"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
solana-program = "1.9.9"
